# slack-google-bot

./: .gitignore  LICENSE  README.md  run-sample  slack-google-bot.cabal  stack.yaml
app/: Main.hs
src/: GoogleCseApi.hs  SearchFormatting.hs  SlackBot.hs
src/AppLib/: GoogleCseApi.hs  SearchFormatting.hs  SlackBot.hs
test/: Spec.hs
